--- a/pages/index.html
+++ b/pages/index.html
@@ -269,7 +269,20 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 <!-- jQuery -->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../js/calc.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pym/1.3.1/p.v1.m.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="js/calc.min.js"></script>
+
+<script type="text/javascript">
+  var pymChild = new pym.Child();
+  pymChild.sendHeight();
+
+  var doit;
+  window.onresize = function(d) {
+    clearTimeout( doit );
+    doit = setTimeout( function(){ pymChild.sendHeight(); }, 200 );
+  };
+
+</script>
 
 </body>
